<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
           android:layout_gravity="center"
            android:src="@drawable/app_logo"
            android:gravity="center"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/id_reg_step1_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/Red"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_textsize"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step1_title_textview"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/id_reg_step1_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/Black"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_textsize"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step1_instruction_textview"/>
            </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/id_reg_country_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/small_textsize"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/registration_step1_country"/>
                <Spinner
                    android:id="@+id/country_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_textsize"
                    android:entries="@array/registration_step1_country_array"
                    android:prompt="@string/registration_step1_country_prompt" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/id_reg_mobile_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/small_textsize"
                android:textColor="@color/Black"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step1_mobile_number_textview"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/small_textsize"
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/user_mobile_number"
                android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingRight="60dp"
                android:paddingLeft="60dp"
                android:layout_height="match_parent">
            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_textsize"
                android:text="@string/registration_step1_register_button"
                android:gravity="center"/>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
</ScrollView>