<?xml version="1.0" encoding="utf-8"?>

   <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                tools:ignore="NestedWeights">
                <ImageView
                    android:id="@+id/imageview_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/app_logo"
                    android:gravity="center"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/normal_text_style"
                    android:id="@+id/update_screen_label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/user_info_instruction_textview"/>

            </RelativeLayout>

        </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">


                    <TextView
                        style="@style/normal_text_style"
                        android:id="@+id/update_work_telephone_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:lineSpacingExtra="2dp"

                        android:text="@string/user_info_work_number_textview"/>
                    <EditText
                        style="@style/editext_background_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textSize="@dimen/small_textsize"
                        android:windowSoftInputMode="adjustResize|stateHidden"
                        android:inputType="number"
                        android:layout_weight="1"
                        android:id="@+id/work_number"
                        android:gravity="center"/>
                </LinearLayout>
            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                    <TextView
                        style="@style/normal_text_style"
                        android:id="@+id/update_home_telephone_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:lineSpacingExtra="2dp"
                        android:text="@string/user_info_home_number_textview"/>

                    <EditText
                        style="@style/editext_background_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textSize="@dimen/small_textsize"
                        android:windowSoftInputMode="adjustResize|stateHidden"
                        android:inputType="number"
                        android:id="@+id/home_number"
                        android:gravity="center"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="60dp"
                    android:paddingLeft="60dp">
                    <Button
                        style="@style/normal_blue_button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_update"
                        android:text="@string/user_info_update_button"
                        android:gravity="center"/>

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
