<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

<LinearLayout
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/app_logo"
            android:gravity="center"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/id_reg_step2_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/Red"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_textsize"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step2_title_textview"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/id_reg_step2_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/Black"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_textsize"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step2_instruction1_textview"/>

        </RelativeLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/id_reg_step2_label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/Black"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_textsize"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step2_instruction2_textview"/>

        </RelativeLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight=".2"
            android:layout_marginBottom="10dp"
                android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:windowSoftInputMode="adjustResize|stateHidden"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/small_textsize"
                    android:id="@+id/edittext_ota_first_digit"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:windowSoftInputMode="adjustResize|stateHidden"
                    android:maxLength="1"
                    android:inputType="number"
                    android:textSize="@dimen/small_textsize"
                    android:id="@+id/edittext_ota_second_digit"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:windowSoftInputMode="adjustResize|stateHidden"
                    android:maxLength="1"
                    android:inputType="number"
                    android:textSize="@dimen/small_textsize"
                    android:id="@+id/edittext_ota_third_digit"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:windowSoftInputMode="adjustResize|stateHidden"
                    android:textSize="@dimen/small_textsize"
                    android:id="@+id/edittext_ota_fourth_digit"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:windowSoftInputMode="adjustResize|stateHidden"
                    android:padding="5dp"
                    android:maxLength="1"
                    android:inputType="number"
                    android:textSize="@dimen/small_textsize"
                    android:id="@+id/edittext_ota_fifth_digit"
                    android:gravity="center"/>


                </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical"></LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_weight=".2"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:textSize="@dimen/small_textsize"
                android:id="@+id/button_retry"
                android:layout_marginRight="5dp"
                android:text="@string/registration_step2_retry_button"
                android:gravity="center"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:textSize="@dimen/small_textsize"
                android:layout_marginRight="5dp"
                android:id="@+id/button_complete"
                android:text="@string/registration_step2_complete_button"
                android:gravity="center"/>
                </LinearLayout>
            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


            <TextView
                android:id="@+id/id_reg_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/Red"
                android:layout_centerInParent="true"
                android:textSize="@dimen/small_note_textsize"
                android:lineSpacingExtra="2dp"
                android:text="@string/registration_step2_instruction2_note"/>



    </LinearLayout>
</LinearLayout>
</LinearLayout>

</ScrollView>

